_build/_log
### Starting build.
# Target: microc.ml.depends, tags: { extension:ml, file:microc.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules microc.ml > microc.ml.depends
# Target: ast.ml.depends, tags: { extension:ml, file:ast.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules ast.ml > ast.ml.depends
# Target: irgen.ml.depends, tags: { extension:ml, file:irgen.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules irgen.ml > irgen.ml.depends
# Target: ast.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ast.cmo, file:ast.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o ast.cmo ast.ml
# Target: sast.ml.depends, tags: { extension:ml, file:sast.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules sast.ml > sast.ml.depends
# Target: sast.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:sast.cmo, file:sast.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o sast.cmo sast.ml
# Target: microcparse.mly, tags: { extension:mly, file:microcparse.mly, infer, ocaml, ocamlyacc, parser, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlyacc microcparse.mly
# Target: microcparse.mli.depends, tags: { extension:mli, file:microcparse.mli, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules microcparse.mli > microcparse.mli.depends
# Target: scanner.mll, tags: { extension:mll, file:scanner.mll, lexer, ocaml, ocamllex, quiet }
/Users/bailytroyer/.opam/default/bin/ocamllex.opt -q scanner.mll
# Target: scanner.ml.depends, tags: { extension:ml, file:scanner.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules scanner.ml > scanner.ml.depends
# Target: microcparse.cmi, tags: { byte, compile, extension:mli, file:microcparse.mli, interf, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o microcparse.cmi microcparse.mli
# Target: semant.ml.depends, tags: { extension:ml, file:semant.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules semant.ml > semant.ml.depends
# Target: irgen.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:irgen.cmo, file:irgen.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o irgen.cmo irgen.ml
+ /Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o irgen.cmo irgen.ml
File "irgen.ml", line 15, characters 11-15:
15 | module L = Llvm
                ^^^^
Error: Unbound module Llvm
Command exited with code 2.
# Compilation unsuccessful.
